# Folio

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  launcher.pyw  package-lock.json  package.json
.codex/: project-memory.md
.codex/environments/: environment.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: desktop_entry.py  main.py  models.py  orpheus_service.py  paths.py  pdf_service.py  reflow_service.py  requirements.txt  setup_kokoro_models.py  text_chunker.py  tts_benchmark.py  tts_queue.py  tts_service.py
backend/tests/: test_tts_queue.py  test_tts_service.py
docs/: packaging.md
frontend/: README.md  index.html
frontend/src/: App.css  App.jsx  api.js  index.css  kokoroVoices.js  main.jsx
frontend/src/components/: AudioPlayer.jsx  FileLoader.jsx  PdfViewer.jsx  Pill.jsx  ReflowViewer.jsx  Sidebar.jsx  Welcome.jsx  icons.jsx
frontend/src/hooks/: useAudioPlayback.js  useBookState.js
frontend/src/styles/: page-turn.css  pill.css  reader.css  tokens.css  welcome.css
scripts/: build-backend.ps1  build-frontend.ps1  build-tauri.ps1  dev-tauri.ps1  run-tauri-dev.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: README.txt
src-tauri/src/: main.rs
