[package]
name = "folio"
version = "0.1.0"
description = "Folio desktop reader"
authors = ["Folio contributors"]
edition = "2021"

[lib]
name = "folio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
