[package]
name = "folio"
version = "0.1.6"
description = "Folio desktop reader"
authors = ["Folio contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2.10.1"
